appId: com.example.frontendd
---
# TC-003 | Login – Validasi password kosong
# Memastikan error muncul jika hanya password yang tidak diisi

- launchApp
- assertVisible: "Welcome back! 👋"
- tapOn: "you@example.com"
- inputText: "admin@tomodachi.com"
- tapOn: "Enter your password"
- eraseText
- tapOn: "Sign In"
- assertVisible: "Email and password are required"
- takeScreenshot: "03_login_password_kosong"
