appId: com.example.frontendd
---
# TC-007 | Login – Toggle visibility password
# Memastikan tombol show/hide password berfungsi

- launchApp
- assertVisible: "Welcome back! 👋"
- tapOn: "Enter your password"
- inputText: "password123"
- tapOn:
    point: 71%,51%
- takeScreenshot: "07_login_toggle_password"
