appId: com.example.frontendd
---
# TC-052 | Kategori – Tambah kategori form
# Memastikan form tambah kategori bisa dibuka

- launchApp
- runFlow:
    file: "login_admin.yaml"
- waitForAnimationToEnd
- tapOn: "Kategori\nTab 2 of 2"
- tapOn: "Kategori"
- assertVisible: "Tambah Kategori"
- takeScreenshot: "52_kategori_tambah_form"
